Обновил структуру папок и файлов

--- a/app/layout/modules/head.pug
+++ b/app/layout/modules/head.pug
@@ -1,11 +1,10 @@
 block variables
 
-doctype html
 html(lang="ru")
 	head
 		meta(charset="UTF-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no")
-		meta(name="og:image" content="../images/social.png")
+		meta(name="og:image" content="img/social.png")
 		meta(name="robots" content="index, follow")
 		meta(name="theme-color" content="#000")
 		meta(name="apple-mobile-web-app-status-bar-style" content="#000")
@@ -13,4 +12,8 @@ html(lang="ru")
 		link(rel="stylesheet" href="css/style.min.css")
 	body
 		include ../tmp/grid
+		include header/header
 		block content
+		block script
+			script(src="js/scripts.min.js")
+		include footer/footer
