--- a/app/sass/_normalize.sass
+++ b/app/sass/_normalize.sass
@@ -139,8 +139,9 @@ template
 [hidden]
 	display: none
 
-h1, h2, h3, h4, h5, h6,
-	margin: 0
+h1
+	font-size: 2em
+	margin: 0.67em 0
 
 ul, li
 	list-style-type: none
