--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -1,20 +1,31 @@
 @import "variables.sass"
+@import "smart-grid.sass"
 
-@import "modules/navigation/menu.sass"
+/* Interface */
+@import "modules/navigation/interface.sass"
+/* Header Block */
 @import "modules/header/header.sass"
 
 
-@import "smart-grid.sass"
+
+/* Footer Block */
+@import "modules/footer/footer.sass"
+
+/* Normalize */
 @import "normalize.sass"
+/* Fonts */
 @import "font.sass"
 
 
 html
 	font-size: $base-font-size
+	overflow-x: hidden
 
 body
 	background-color: $white
 	font-family: 'Roboto', sans-serif
+	font-size: $base-font-size
+	overflow-x: hidden
 
 .wrapper
 	+wrapper()
