--- a/app/scss/base/_variables.scss
+++ b/app/scss/base/_variables.scss
@@ -1,4 +1,13 @@
 :root {
-    --dark: #303030;
-    --black: #1A1A1A;
+    --color-blue: #4A72CE;
+    --color-blue-opaciti-85: rgba(74, 114, 206, 0.85);
+    --color-light-blue: #5FB2D6;
+    --color-dark-blue: #43b1e0;
+    --color-dark: #555555;
+	--color-gray: #EFEFEF;
+	--color-white: #FFFFFF;
+    --color-dark-gray: #A9A9A9;
+    --color-white-gray: #E5E5E5;
+    --font-roboto: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-gotham: "GothamPro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
