Подправил структуру scss

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,8 +6,24 @@
 @import "./base/variables";
 /* Base */
 @import "./base/base";
+/* Animation */
+@import "./base/animation";
 /* Base Classes */
 @import "./base/classes";
+
 /* Blocks */
 /* Page */
 @import "./blocks/page/page";
+
+/* ANOTHER MODULES */
+/* ANOTHER MODULES */
+/* ANOTHER MODULES */
+
+/* Swiper Slider Examples*/
+// @import "./blocks/swiper/swiper";
+
+/* ANOTHER MODULES */
+/* ANOTHER MODULES */
+/* ANOTHER MODULES */
+
+/* MEDIA QUERIES */
