--- a/src/scss/blocks/page/_page.scss
+++ b/src/scss/blocks/page/_page.scss
@@ -3,11 +3,16 @@
 	margin: 0;
 	font-family: var(--font-roboto);
 	font-size: 16px;
-    line-height: 1.25;
-	background-color: var(--color-white);
+    line-height: 1.35;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    min-height: 100vh;
     &__container {
         max-width: 1920px;
+        width: 100%;
         margin: 0 auto;
+        overflow: hidden;
     }
 }
