--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,13 @@
 /* Base Classes */
 @import "./base/classes";
 
+/* ANOTHER MODULES */
+
+/* Swiper Slider Examples*/
+// @import "./blocks/swiper/swiper";
+
+/* ANOTHER MODULES */
+
 /* Blocks */
 /* Page */
 @import "./blocks/page/page";
