--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,4 +1,8 @@
-{% include "partials/_header.html" %}
+{% set title = "Новости" %}
+
+{% extends "layouts/_default.html" %}
+
+{% block content %}
 
 <!-- MAIN -->
 <main class="main page__container bg--white">
@@ -8,4 +12,4 @@
 
 
 
-{% include "partials/_footer.html" %}
+{% endblock %}
